Reportes listo
Se hicieron los test de reportes